--- a/src/main.glade
+++ b/src/main.glade
@@ -25,7 +25,7 @@
     <property name="width_request">1366</property>
     <property name="height_request">600</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">AU HTTP</property>
+    <property name="title" translatable="yes">AU Web Client</property>
     <child>
       <placeholder/>
     </child>
