--- a/src/main.glade
+++ b/src/main.glade
@@ -2,25 +2,7 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkTextTagTable" id="texttagtable1">
-    <child type="tag">
-      <object class="GtkTextTag" id="sntx_comment">
-        <property name="name">sntx_comment</property>
-        <property name="background_rgba">rgb(255,255,255)</property>
-        <property name="foreground_rgba">rgb(0,0,0)</property>
-        <property name="font">Normal</property>
-      </object>
-    </child>
-    <child type="tag">
-      <object class="GtkTextTag" id="sntx_keyword">
-        <property name="name">sntx_keyword</property>
-        <property name="font">Normal</property>
-      </object>
-    </child>
-  </object>
-  <object class="GtkTextBuffer" id="textbuffer1">
-    <property name="tag_table">texttagtable1</property>
-  </object>
+  <requires lib="gtksourceview" version="3.0"/>
   <object class="GtkApplicationWindow" id="window1">
     <property name="width_request">1366</property>
     <property name="height_request">600</property>
@@ -338,15 +320,16 @@
                     <property name="can_focus">True</property>
                     <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkTextView" id="respMtx">
+                      <object class="GtkSourceView" id="respMtx">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="hexpand">True</property>
-                        <property name="wrap_mode">word</property>
                         <property name="left_margin">4</property>
                         <property name="right_margin">4</property>
-                        <property name="buffer">textbuffer1</property>
                         <property name="monospace">True</property>
+                        <property name="show_line_numbers">True</property>
+                        <property name="tab_width">4</property>
+                        <property name="indent_width">4</property>
+                        <property name="right_margin_position">120</property>
                         <style>
                           <class name="au-code-view"/>
                         </style>
