--- a/src/main.glade
+++ b/src/main.glade
@@ -4,10 +4,12 @@
   <requires lib="gtk+" version="3.20"/>
   <requires lib="gtksourceview" version="3.0"/>
   <object class="GtkApplicationWindow" id="window1">
+    <property name="name">AU Web Client</property>
     <property name="width_request">1024</property>
     <property name="height_request">600</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">AU Web Client</property>
+    <property name="icon_name">auweb</property>
     <child>
       <placeholder/>
     </child>
